PMA-3 fix(WelcomePage): renaming styles in components and wrapped Person component

--- a/src/components/pages/WelcomePage/AboutTeam/styles.module.scss
+++ b/src/components/pages/WelcomePage/AboutTeam/styles.module.scss
@@ -1,8 +1,7 @@
 .wrapper {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  row-gap: 15px;
-  column-gap: 15px;
+  gap: 15px 15px;
 }
 
 .title {
